# safe-sync

./: .gitignore  README.md  install.sh  uninstall.sh
.codex/: sessions.md
config/: filter.txt  safe-sync.example.json
docs/: roadmap.md
docs/decisions/: 0001-safe-sync-model.md  0002-watch-daemon-model.md  0003-tray-ui-model.md
docs/operations/: daemon-design.md  dogfood-report.md  filter-policy.md  installation-and-setup-plan.md  operating-model.md  tauri-tray-workflow.md  test-plan.md
docs/product/: product-plan.md
src/safe_sync/: __init__.py  api.py  cli.py  daemon.py  path_filter.py  service.py
tests/: test_daemon_state.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: main.ts  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
